[DMU] fix the clipping

--- a/docdoku-server/docdoku-server-web/src/main/webapp/less/product-structure/content.less
+++ b/docdoku-server/docdoku-server-web/src/main/webapp/less/product-structure/content.less
@@ -86,7 +86,7 @@
 
       input#slider-explode,
       input#slider-cut-plan,
-      .noUi-base{
+      {
         width:98%;
         -webkit-appearance: none;
         -webkit-border-radius: 0px;
@@ -100,13 +100,13 @@
       }
 
       .noUi-base{
-        padding-right:10px;
+        //padding-right:10px;
       }
 
 
       input#slider-explode::-webkit-slider-thumb,
       input#slider-cut-plan::-webkit-slider-thumb,
-      .noUi-handle{
+      {
         -webkit-appearance: none;
         background-image: linear-gradient(to bottom, #7a99c1, #2c4361);
         width: 10px;
@@ -115,7 +115,7 @@
 
       .noUi-origin{
         .noUi-handle-upper{
-          left: -10px;
+          //left: -10px;
         }
       }
     }
